More thorough ProcessNode testing
Signed-off-by: Daniel Widdis <widdis@gmail.com>